# my-health-record

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .scalafmt.conf  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile.toml  README.adoc  TODO.md  build.sbt  index.html
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  scala.yml
app/: .metadata  README.md  pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/profile/: AndroidManifest.xml
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/domain/repository/: patient_repository.dart
app/lib/infrastructure/: di.dart
app/lib/infrastructure/api/: medical.pb.dart  medical.pbenum.dart  medical.pbgrpc.dart  medical.pbjson.dart
app/lib/infrastructure/components/arganisms/: home.dart  patient_information.dart  search_page.dart
app/lib/infrastructure/components/atoms/: field.dart
app/lib/infrastructure/repository/: patient_repository_impl.dart
app/linux/: CMakeLists.txt
app/protos/: medical.proto
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/runner/: Runner.rc
back/src/main/protobuf/: Health.proto  patient.proto  patientapi.proto
back/src/main/resources/: applicatien.conf  application.conf  logback.xml
back/src/main/resources/certs/: client.crt  client.csr  client.jks  clientca.crt  clientca.jks  clientca.p12  miuler.com.crt  miuler.com.csr  miuler.com.jks  miuler.com.key  miuler.com.p12  miulerca.crt  miulerca.jks  miulerca.trust.jks
back/src/main/scala/medical/: Main.scala  PatientServer.scala  PatientServiceImpl.scala
back/src/main/scala/medical/application/: PatientService.scala
back/src/main/scala/medical/domain/: ContactPoint.scala  HumanName.scala  Patient.scala  PatientBasic.scala  package.scala
back/src/main/scala/medical/domain/repository/: PatientRepository.scala
back/src/main/scala/medical/infraestructure/: Main.scala  PatientServer.scala
back/src/main/scala/medical/infraestructure/actor/: PatientBehavior.scala
back/src/main/scala/medical/infraestructure/api/: HealthImpl.scala  PatientApiImpl.scala
back/src/main/scala/medical/infraestructure/di/: PatientModule.scala
back/src/main/scala/medical/infraestructure/presentation/: HealthImpl.scala  PatientApiImpl.scala
back/src/main/scala/medical/infraestructure/repository/: PatientRepositoryImpl.scala
back/src/main/scala/medical/presentation/: HealthImpl.scala  PatientApiImpl.scala
back/src/test/scala/: KafkaTest.scala  RSATest.scala
backend/: Cargo.toml  README.md  build.rs
backend/src/: lib.rs  main.rs
backend/src/infraestructure/: mod.rs
devops/: Pulumi.dev.yaml  Pulumi.yaml  index.ts  package.json
dtos/src/main/protobuf/: patientapi.proto
dtos/src/main/scala/medical/: Main.scala
dtos/src/main/scala/medical/dtos/: PatientBasic.scala
front/: index.html  postcss.config.js  tailwind.config.js
front/src/main/protobuf/: patient.proto
front/src/main/scala/medical/: Main.scala  PatientBasic.scala  PatientSection.scala  SearchSection.scala
front/src/main/scala/medical/command/: Command.scala  package.scala
front/src/main/scala/medical/domain/: ContactPoint.scala  HumanName.scala  LoginGoogleResponse.scala  Patient.scala  package.scala
front/src/main/scala/medical/domain/repository/: PatientRepository.scala
front/src/main/scala/medical/infrastructure/: package.scala
front/src/main/scala/medical/infrastructure/repository/: PatientRepositoryImpl.scala
front/src/main/scala/medical/infrastructure/ui/: CommandHandler.scala  Main.scala  MainUI.scala  Router.scala
front/src/main/scala/medical/ui/: CommandHandler.scala  Main.scala  MainUI.scala  PatientSection.scala  Router.scala  SearchSection.scala
frontend/: .editorconfig  .firebaserc  Cargo.toml  Makefile.toml  README.md  build.rs  index.html  tailwind.config.js
frontend/src/: app.rs  di.rs  lib.rs  main.rs
frontend/src/components/: mod.rs  route.rs
frontend/src/components/atoms/: button.rs
frontend/src/components/organisms/: header.rs  header_public.rs  mod.rs
frontend/src/domain/: error.rs  mod.rs  patient.rs
frontend/src/infraestructure/ui/: mod.rs  route.rs
frontend/src/infraestructure/ui/organisms/: header.rs  header_public.rs  mod.rs
frontend/src/infraestructure/ui/pages/: history_detail.rs  home.rs  mod.rs  search.rs
frontend/src/infrastructure/: mod.rs
frontend/src/infrastructure/ui/: app_state_context.rs  mod.rs  route.rs
frontend/src/infrastructure/ui/atoms/: button.rs
frontend/src/infrastructure/ui/organisms/: header.rs  header_public.rs
frontend/src/infrastructure/ui/pages/: history_detail.rs  home.rs  mod.rs  not_found.rs  search.rs
frontend/src/pages/: history_detail.rs  home.rs  not_found.rs  private_home.rs  search.rs
frontend/src/services/: mod.rs  patient_service.rs
frontend/src/ui/: app.rs
frontend/src/ui/components/: mod.rs
frontend/src/ui/components/atoms/: button.rs
frontend/src/ui/components/molecules/: input.rs
frontend/src/ui/components/organisms/: header.rs  header_public.rs  mod.rs  patient_detail.rs
frontend/src/ui/pages/: history_detail.rs  home.rs  mod.rs  private_home.rs  search.rs
project/: Dependencies.scala  codeQuality.sbt  plugins.sbt  protoc.sbt  scalajs.sbt
proto/: api.proto
src/main/scala/: Main.scala  SearchSection.scala
test-suite/: README.md
test-suite/src/test/protobuf/: patientapi.proto
test-suite/src/test/scala/computerdatabase/: BasicSimulation.scala
(+37 files in other folders)
