[package]
name = "medical-history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
log4rs = { path = "/home/miuler/proyectos/log4rs" }
prost = "0.11.8"
prost-types = "0.11.8"
tonic = "0.8.3"


[build-dependencies]
tonic-build = "0.8.4"
