[package]
name = "medical_back"
version = "0.1.0"
edition = "2021"


[dependencies]
log = "0.4.17"
log4rs = { path = "/home/miuler/proyectos/log4rs" }
prost = "0.11.8"
prost-types = "0.11.8"
tokio = { version = "1.28.2", features = ["tokio-macros", "rt-multi-thread"] }
tonic = "0.9.2"
tonic-reflection = "0.9.2"
tonic-web = "0.9.2"


[build-dependencies]
tonic-build = "0.8.4"
