[package]
name = "medical_back"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.6.20"
log = "0.4.20"
log4rs = { path = "/home/miuler/proyectos/log4rs" }
prost = "0.11.9"
prost-types = "0.11.9"
tokio = { version = "1.33.0", features = ["tokio-macros", "rt-multi-thread"] }
tonic = "0.9.2"
tonic-reflection = "0.9.2"
tonic-web = "0.9.2"


[build-dependencies]
tonic-build = "0.8.4"
