[package]
name = "medical_front"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
derive_builder = "0.12.0"
display_json = "0.2.1"
gloo-storage = "0.2.2"
log = "0.4.17"
parse-display = "0.8.0"
prost = "0.11.9"
serde = "1.0.164"
serde_json = "1.0.96"
tonic = { version = "0.9.2", features = ["prost", "codegen"], default-features = false }
tonic-web-wasm-client = "0.4.0"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.63", features = ["css", "CssStyleDeclaration"] }
yew = { version="0.20", features=["csr"] }
yew-router = "0.17.0"

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"], default-features = false }
